--- a/src/app/game.component.css
+++ b/src/app/game.component.css
@@ -47,6 +47,7 @@ mat-toolbar {
 .canvas-wrapper {
     margin: 2rem auto;
     max-width: 400px;
+    background-color: rgb(250, 244, 221);
 }
 
 .app-wrapper {
