info should really be Help

--- a/src/app/game.component.html
+++ b/src/app/game.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button class="float-left" (click)="reset()">
         <mat-icon>replay</mat-icon>
       </button>
-      <button mat-icon-button class="float-right" (click)="openInfoDialog()">
+      <button mat-icon-button class="float-right" (click)="openHelpDialog()">
         <mat-icon>help</mat-icon>
       </button>
       <button mat-icon-button [disabled]="currentIndex==0" (click)="undo()">
