refactor gameOver to new standards

--- a/src/app/gameOver/gameOver.component.html
+++ b/src/app/gameOver/gameOver.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>EndGame</h1>
+<h1 mat-dialog-title>Game Over</h1>
 <div mat-dialog-content class="content-wrapper">
   <p *ngIf="data.winingPlayer">{{data.winingPlayer}} player has won!</p>
   <p *ngIf="!data.winingPlayer">Draw!</p>
